<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="italic"
        android:textAppearance="?android:attr/textAppearanceSmall" >
    </TextView>

    <EditText
        android:id="@+id/etSQLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType = "text"
        android:cursorVisible="true">
    </EditText>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name2"
        android:textStyle="italic"
        android:textAppearance="?android:attr/textAppearanceSmall" >
    </TextView>
    
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/ingredient_array"
        android:prompt="@string/ingredient_prompt" />
    
     <Button
        android:id="@+id/bSQLUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/creative_blue"
        android:text="@string/up" >
    </Button>

</LinearLayout>