<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/main_menu"
    tools:context=".MainMenu" >
    
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@drawable/cart"
         android:layout_above="@+id/add_ingredients_button"
         android:src="@drawable/cart" />

    <Button
        android:id="@+id/manage_favorites_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="28dp"
        android:typeface="serif"
        android:background="@drawable/creative_blue"
        android:onClick="manageFavorites"
        android:text="@string/manage_favorites" />

    <Button
        android:id="@+id/manage_pantry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/manage_favorites_button"
        android:layout_alignLeft="@+id/manage_favorites_button"
        android:background="@drawable/creative_blue"
        android:typeface="serif"
        android:onClick="managePantry"
        android:text="@string/manage_pantry" />

    <Button
        android:id="@+id/search_recipes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/manage_pantry_button"
        android:layout_alignLeft="@+id/manage_pantry_button"
        android:background="@drawable/creative_blue"
        android:typeface="serif"
        android:onClick="searchRecipes"
        android:text="@string/search_recipe" />

    <Button
        android:id="@+id/add_ingredients_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_recipes_button"
        android:layout_alignLeft="@+id/search_recipes_button"
        android:background="@drawable/creative_blue"
        android:typeface="serif"
        android:onClick="addIngredients"
        android:text="@string/add_ingredient" />

</RelativeLayout>